from io import BytesIO
import uuid

from django.contrib.postgres.fields import ArrayField
from django.core.files.uploadedfile import InMemoryUploadedFile
from django.db import models
from django.db.models import Q, CheckConstraint
from PIL import Image


class Category(models.Model):
    name = models.CharField(max_length=80, unique=True)
    active = models.BooleanField(default=True)
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    class Meta:
        db_table = 'categories'
        ordering = ['name']

    def __str__(self):
        return self.name


class Product(models.Model):
    name = models.CharField(max_length=120)
    price = models.DecimalField(max_digits=10, decimal_places=2)
    category = models.ForeignKey(
        Category,
        on_delete=models.PROTECT,
        related_name='products',
        null=True,
        blank=True,
    )
    active = models.BooleanField(default=True)
    max_per_order = models.IntegerField(null=True, blank=True)
    image = models.ImageField(upload_to='products/', max_length=2048, null=True, blank=True)
    description = models.TextField(null=True, blank=True)
    modifiers = ArrayField(models.CharField(max_length=50), null=True, blank=True)
    created_at = models.DateTimeField(auto_now_add=True)
    updated_at = models.DateTimeField(auto_now=True)

    class Meta:
        db_table = 'products'
        ordering = ['-created_at']
        constraints = [
            CheckConstraint(condition=Q(price__gt=0), name='price_gt_0'),
            CheckConstraint(
                condition=Q(max_per_order__gt=0) | Q(max_per_order__isnull=True),
                name='max_per_order_gt_0_or_null',
            ),
        ]

    """ Convert image to webp, resize and change name on save """
    def save(self, *args, **kwargs):
        update_fields = kwargs.get('update_fields')
        # Solo reprocesar la imagen cuando se guarda el campo image.
        # Si update_fields no la incluye (p. ej. toggle-active con
        # update_fields=['active', 'updated_at']), respetar la imagen
        # existente para no generar un archivo huérfano ni perder la URL.
        should_process_image = update_fields is None or 'image' in update_fields

        if should_process_image and self.image and self.image.name:
            img = Image.open(self.image)

            img.thumbnail((800, 800), Image.Resampling.LANCZOS)

            output = BytesIO()
            if img.mode in ('RGBA', 'LA', 'P'):
                img = img.convert('RGB')
            img.save(output, format='WEBP', quality=85)
            output.seek(0)

            new_filename = f"{uuid.uuid4()}.webp"

            self.image = InMemoryUploadedFile(
                output,
                'ImageField',
                new_filename,
                'image/webp',
                output.getbuffer().nbytes,
                None
            )

        super().save(*args, **kwargs)


    def __str__(self):
        return self.name


class ProductStock(models.Model):
    class StockState(models.IntegerChoices):
        NOT_TRACKED = -1, 'Sin stock activado'
        OUT_OF_STOCK = 0, 'Sin stock'
        IN_STOCK = 1, 'Con stock'

    branch = models.ForeignKey(
        'branches.Branch',
        on_delete=models.CASCADE,
        related_name='product_stocks',
    )
    product = models.ForeignKey(
        Product,
        on_delete=models.CASCADE,
        related_name='branch_stocks',
    )
    stock = models.IntegerField(
        choices=StockState.choices,
        default=StockState.NOT_TRACKED,
    )
    updated_at = models.DateTimeField(auto_now=True)
    pk = models.CompositePrimaryKey('branch_id', 'product_id')

    class Meta:
        db_table = 'product_stocks'
        constraints = [
            models.CheckConstraint(
                condition=models.Q(stock__in=[-1, 0, 1]),
                name='product_stock_valid_state',
            ),
        ]

    def __str__(self):
        return f'{self.product} - {self.branch}'
